--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -17,7 +17,7 @@
 					<a class="btn btn-default supportPost" href="javascript:;" data-post = "${post.id!}" data-num = "0" data-toggle="tooltip" title="踩" ><i class="fa fa-thumbs-o-down"></i> <span class="supportNum">${post.cons!0}</span></a>
 					<a class="btn ${post.isAccept == 0 ?'btn-default':'btn-success'} ${isAdmin?'adminAgree'}" href="javascript:;" data-toggle="tooltip" title="采纳"  data-post = "${post.id!}" ><i class="fa fa-star"></i></a>
 					@if(_user.id!0==post.userId||isAdmin){
-					<a class="btn btn-default" href="${ctxPath}/bbs/admin/post/edit/${post.id}" data-toggle="tooltip" title="编辑"  ><i class="fa fa-edit"></i></a>
+					<a class="btn btn-default" href="admin/post/edit/${post.id}" data-toggle="tooltip" title="编辑"  ><i class="fa fa-edit"></i></a>
 					<a class="btn btn-default" href="javascript:;" onclick="deletePost(this)" data-toggle="tooltip" title="删除"  ><i class="fa fa-trash"></i></a>
 					@}
 					<a class="btn btn-default" href="javascript:;" onclick="showReplyDialog('${post.id!}','${topic.id!}')" data-toggle="tooltip" title="回复"  ><i class="fa fa-reply"></i></a>
@@ -36,9 +36,9 @@
 			@}
 		</div>
 		@}
-		<#page query="${postPage}" url="${ctxPath}/bbs/topic/${topic.id}/"/>
+		<#page query="${postPage}" url="topic/${topic.id}/"/>
 		@if(_user!=null){
-		<form id="postForm" action="${ctxPath}/bbs/post/save" method="POST"  onsubmit="return ajaxSubmit(this,'reload')"> 
+		<form id="postForm" action="post/save" method="POST"  onsubmit="return ajaxSubmit(this,'reload')">
 			<input type="hidden" name="topicId" value="${topic.id}">
 			<div class="form-group">
 			<textarea id="postContent" name="content"></textarea>
@@ -52,7 +52,7 @@
 	<div class="modal-dialog modal-sm">
 		<div class="modal-content">
 			<div class="modal-body">
-				<form class="form-search" action="${ctxPath}/bbs/reply/save" onsubmit="return ajaxSubmit(this,'reload')" >
+				<form class="form-search" action="reply/save" onsubmit="return ajaxSubmit(this,'reload')" >
 					<input type="hidden" name="postId" value="${post.id!}"/>
 					<input type="hidden" name="topicId" value="${topic.id!}"/>
 					<div class="form-group">
@@ -75,7 +75,7 @@
 		 var _this = $(this);
 		 var p = _this.parents('.list-group-item');
 		 $.confirm('确定要删除该回复吗？',function(e){
-			 e&&$.post('${ctxPath}/bbs/admin/reply/delete/'+_this.data('id'),function(json){
+			 e&&$.post('admin/reply/delete/'+_this.data('id'),function(json){
 				 json.err?$.alert(json.msg):p.remove();
 			 })
 		 })
@@ -88,7 +88,7 @@
 	 		var num = _this.data('num');
 	 		var supportNum = _this.children(".supportNum")
 	 		var data = {'num':num};
-	 		$.post('${ctxPath}/bbs/post/support/'+postId,data,function(json){
+	 		$.post('post/support/'+postId,data,function(json){
 	 			 json.err?$.alert(json.msg):supportNum.html(json.data);
 	 		 })
 		 })
@@ -96,7 +96,7 @@
 	$('.adminAgree').on('click',function(){
 	 	var _this = $(this);
 	 	var postId = _this.data('post');
-	 	$.post('${ctxPath}/bbs/user/post/accept/'+postId,function(json){
+	 	$.post('user/post/accept/'+postId,function(json){
 	 		 if(json.err){
 	 			$.alert(json.msg)
 	 		 }else{
@@ -128,7 +128,7 @@
  function deletePost(el){
 	 var p = $(el).parents('.panel-default[data-post]');
 	 $.confirm('确定要删除该内容吗？',function(e){
-		 e&&$.post('${ctxPath}/bbs/admin/post/delete/'+p.data('post'),function(json){
+		 e&&$.post('admin/post/delete/'+p.data('post'),function(json){
 			 json.err?$.alert(json.msg):p.remove();
 		 })
 	 })
