调整搜索为lucene方式

--- a/src/main/resources/templates/common/layout.html
+++ b/src/main/resources/templates/common/layout.html
@@ -110,7 +110,7 @@
 						<li><a href="javascript:;">你已有${_user.score}积分</a></li>
 						<li><a href="javascript:;">等级：${level(_user.level)}</a></li>
 						@if(isAdmin){
-							<li><a href="javascript:;" id="initEs" data-href="bbs/admin/es/init">初始化ES索引</a></li>
+							<li><a href="javascript:;" id="initEs" data-href="bbs/admin/es/init">初始化文章索引</a></li>
 						@}
 						<li class="divider"></li>
 						<li><a href="myMessage">给我的回复</a></li>
