--- a/src/main/resources/templates/lucene/lucene.html
+++ b/src/main/resources/templates/lucene/lucene.html
@@ -42,7 +42,7 @@
 							<div class="frist-post"><pre class="pre">${searcher.postContent}</pre></div>
 					</div>
 					@if(isAdmin){
-					<div class="admin" data-topic=${searcher.userId}>
+					<div class="admin" data-topic=${searcher.topicId}>
 							<a href="javascript:;"  class="btn btn-default btn-xs nice-btn">精华</a>
 							<a href="javascript:;"  class="btn btn-default btn-xs top-btn">置顶</a>
 							<a href="javascript:;"  class="btn btn-default btn-xs del-btn">删除</a>
@@ -55,4 +55,22 @@
 			@}
        </div>
 	   <#page query="${searcherPage}"/>
+	    <script>
+       $('#searcher-list').on('click','.nice-btn',function(){
+    	   $.post('admin/topic/nice/'+$(this).parents('div').data('topic'),function(json){
+    		   json.err||location.reload();
+    	   })
+       }).on('click','.top-btn',function(){
+    	   $.post('admin/topic/up/'+$(this).parents('div').data('topic'),function(json){
+    		   json.err||location.reload();
+    	   })
+       }).on('click','.del-btn',function(){
+    	   var topicid = $(this).parents('div').data('topic');
+    	   $.confirm('确定要删除该主题么？',function(e){
+    		   e&&$.post('admin/topic/delete/'+topicid,function(json){
+        		   json.err||location.reload();
+        	   })
+    	   })
+       })
+       </script>
 @}    
